tests/negative/neg_pr1116_nominal_implicit_integer.safe
package neg_pr1116_nominal_implicit_integer

   type user_id is new integer (0 to 1000)

   raw : integer = 42
   value : user_id = raw
